--- a/checkout.html
+++ b/checkout.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce27" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -84,18 +85,18 @@
                   <h2 class="heading-h4-size mg-bottom-0">Customer Info</h2>
                   <div>* Required</div>
                 </div>
-                <fieldset class="w-commerce-commercecheckoutblockcontent checkout-block-content"><label for="" class="w-commerce-commercecheckoutlabel">Email *</label><input type="text" class="w-commerce-commercecheckoutemailinput input medium last" name="email" required=""></fieldset>
+                <fieldset class="w-commerce-commercecheckoutblockcontent checkout-block-content"><label for="" class="w-commerce-commercecheckoutlabel">Email *</label><input class="w-commerce-commercecheckoutemailinput input medium last" type="text" name="email" required=""></fieldset>
               </form>
               <form data-node-type="commerce-checkout-shipping-address-wrapper" class="w-commerce-commercecheckoutshippingaddresswrapper card checkout-block">
                 <div class="w-commerce-commercecheckoutblockheader checkout-block-header">
                   <h2 class="heading-h4-size mg-bottom-0">Shipping Address</h2>
                   <div>* Required</div>
                 </div>
-                <fieldset class="w-commerce-commercecheckoutblockcontent checkout-block-content"><label for="" class="w-commerce-commercecheckoutlabel">Full Name *</label><input type="text" class="w-commerce-commercecheckoutshippingfullname input medium" name="name" required=""><label for="" class="w-commerce-commercecheckoutlabel">Street Address *</label><input type="text" class="w-commerce-commercecheckoutshippingstreetaddress input medium" name="address_line1" required=""><input type="text" aria-label="" class="w-commerce-commercecheckoutshippingstreetaddressoptional input medium" name="address_line2">
+                <fieldset class="w-commerce-commercecheckoutblockcontent checkout-block-content"><label for="" class="w-commerce-commercecheckoutlabel">Full Name *</label><input class="w-commerce-commercecheckoutshippingfullname input medium" name="name" type="text" required=""><label for="" class="w-commerce-commercecheckoutlabel">Street Address *</label><input class="w-commerce-commercecheckoutshippingstreetaddress input medium" name="address_line1" type="text" required=""><input aria-label="" class="w-commerce-commercecheckoutshippingstreetaddressoptional input medium" name="address_line2" type="text">
                   <div class="w-commerce-commercecheckoutrow flex-vertical---mbl">
-                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">City *</label><input type="text" class="w-commerce-commercecheckoutshippingcity input medium" name="address_city" required=""></div>
-                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">State/Province</label><input type="text" class="w-commerce-commercecheckoutshippingstateprovince input medium" name="address_state"></div>
-                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">Zip/Postal Code *</label><input type="text" data-node-type="commerce-checkout-shipping-zip-field" class="w-commerce-commercecheckoutshippingzippostalcode input medium" name="address_zip" required=""></div>
+                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">City *</label><input class="w-commerce-commercecheckoutshippingcity input medium" name="address_city" type="text" required=""></div>
+                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">State/Province</label><input class="w-commerce-commercecheckoutshippingstateprovince input medium" name="address_state" type="text"></div>
+                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">Zip/Postal Code *</label><input data-node-type="commerce-checkout-shipping-zip-field" class="w-commerce-commercecheckoutshippingzippostalcode input medium" name="address_zip" type="text" required=""></div>
                   </div><label for="" class="w-commerce-commercecheckoutlabel">Country *</label><select class="w-commerce-commercecheckoutshippingcountryselector input medium last" name="address_country">
                     <option value="AF">Afghanistan</option>
                     <option value="AX">Aland Islands</option>
@@ -352,8 +353,8 @@
                   <h2 class="heading-h4-size mg-bottom-0">Shipping Method</h2>
                 </div>
                 <fieldset class="checkout-block-content pd-top-0px">
-                  <script type="text/x-wf-template" id="wf-template-61a06c974a45ef8717766f6d000000000042">%3Clabel%20class%3D%22w-commerce-commercecheckoutshippingmethoditem%20shipping-method%22%3E%3Cinput%20type%3D%22radio%22%20required%3D%22%22%20class%3D%22radio-button%20small%22%20name%3D%22shipping-method-choice%22%2F%3E%3Cdiv%20class%3D%22w-commerce-commercecheckoutshippingmethoddescriptionblock%20shipping-method-content%22%3E%3Cdiv%20class%3D%22w-commerce-commerceboldtextblock%20heading-h5-size%20mg-bottom-4px%22%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22paragraph-small%20color-neutral-600%22%3E%3C%2Fdiv%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22shipping-price%22%3E%3C%2Fdiv%3E%3C%2Flabel%3E</script>
-                  <div data-node-type="commerce-checkout-shipping-methods-list" class="w-commerce-commercecheckoutshippingmethodslist shipping-list" data-wf-collection="database.commerceOrder.availableShippingMethods" data-wf-template-id="wf-template-61a06c974a45ef8717766f6d000000000042"><label class="w-commerce-commercecheckoutshippingmethoditem shipping-method"><input type="radio" required="" class="radio-button small" name="shipping-method-choice">
+                  <script type="text/x-wf-template" id="wf-template-61a06c974a45ef8717766f6d000000000042">%3Clabel%20class%3D%22w-commerce-commercecheckoutshippingmethoditem%20shipping-method%22%3E%3Cinput%20required%3D%22%22%20class%3D%22radio-button%20small%22%20type%3D%22radio%22%20name%3D%22shipping-method-choice%22%2F%3E%3Cdiv%20class%3D%22w-commerce-commercecheckoutshippingmethoddescriptionblock%20shipping-method-content%22%3E%3Cdiv%20class%3D%22w-commerce-commerceboldtextblock%20heading-h5-size%20mg-bottom-4px%22%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22paragraph-small%20color-neutral-600%22%3E%3C%2Fdiv%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22shipping-price%22%3E%3C%2Fdiv%3E%3C%2Flabel%3E</script>
+                  <div data-node-type="commerce-checkout-shipping-methods-list" class="w-commerce-commercecheckoutshippingmethodslist shipping-list" data-wf-collection="database.commerceOrder.availableShippingMethods" data-wf-template-id="wf-template-61a06c974a45ef8717766f6d000000000042"><label class="w-commerce-commercecheckoutshippingmethoditem shipping-method"><input required="" class="radio-button small" type="radio" name="shipping-method-choice">
                       <div class="w-commerce-commercecheckoutshippingmethoddescriptionblock shipping-method-content">
                         <div class="w-commerce-commerceboldtextblock heading-h5-size mg-bottom-4px"></div>
                         <div class="paragraph-small color-neutral-600"></div>
@@ -389,7 +390,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="w-commerce-commercecheckoutbillingaddresstogglewrapper checkbox-field-wrapper mg-bottom-0"><input type="checkbox" id="billing-address-toggle" data-node-type="commerce-checkout-billing-address-toggle-checkbox" class="w-commerce-commercecheckoutbillingaddresstogglecheckbox checkbox small" checked=""><label for="billing-address-toggle" class="w-commerce-commercecheckoutbillingaddresstogglelabel mg-bottom-0">Billing address same as shipping</label></div>
+                  <div class="w-commerce-commercecheckoutbillingaddresstogglewrapper checkbox-field-wrapper mg-bottom-0"><input id="billing-address-toggle" data-node-type="commerce-checkout-billing-address-toggle-checkbox" class="w-commerce-commercecheckoutbillingaddresstogglecheckbox checkbox small" type="checkbox" checked=""><label for="billing-address-toggle" class="w-commerce-commercecheckoutbillingaddresstogglelabel mg-bottom-0">Billing address same as shipping</label></div>
                 </fieldset>
               </div>
               <form data-node-type="commerce-checkout-billing-address-wrapper" style="display:none" class="w-commerce-commercecheckoutbillingaddresswrapper card checkout-block">
@@ -397,11 +398,11 @@
                   <h2 class="heading-h4-size mg-bottom-0">Billing Address</h2>
                   <div>* Required</div>
                 </div>
-                <fieldset class="w-commerce-commercecheckoutblockcontent checkout-block-content"><label for="" class="w-commerce-commercecheckoutlabel">Full Name *</label><input type="text" class="w-commerce-commercecheckoutbillingfullname input medium" name="name" required=""><label for="" class="w-commerce-commercecheckoutlabel">Street Address *</label><input type="text" class="w-commerce-commercecheckoutbillingstreetaddress input medium" name="address_line1" required=""><input type="text" aria-label="" class="w-commerce-commercecheckoutbillingstreetaddressoptional input medium" name="address_line2">
+                <fieldset class="w-commerce-commercecheckoutblockcontent checkout-block-content"><label for="" class="w-commerce-commercecheckoutlabel">Full Name *</label><input class="w-commerce-commercecheckoutbillingfullname input medium" name="name" type="text" required=""><label for="" class="w-commerce-commercecheckoutlabel">Street Address *</label><input class="w-commerce-commercecheckoutbillingstreetaddress input medium" name="address_line1" required="" type="text"><input aria-label="" class="w-commerce-commercecheckoutbillingstreetaddressoptional input medium" name="address_line2" type="text">
                   <div class="w-commerce-commercecheckoutrow flex-vertical---mbl">
-                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">City *</label><input type="text" class="w-commerce-commercecheckoutbillingcity input medium" name="address_city" required=""></div>
-                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">State/Province</label><input type="text" class="w-commerce-commercecheckoutbillingstateprovince input medium" name="address_state"></div>
-                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">Zip/Postal Code *</label><input type="text" data-node-type="commerce-checkout-billing-zip-field" class="w-commerce-commercecheckoutbillingzippostalcode input medium" name="address_zip" required=""></div>
+                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">City *</label><input class="w-commerce-commercecheckoutbillingcity input medium" name="address_city" type="text" required=""></div>
+                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">State/Province</label><input class="w-commerce-commercecheckoutbillingstateprovince input medium" name="address_state" type="text"></div>
+                    <div class="w-commerce-commercecheckoutcolumn"><label for="" class="w-commerce-commercecheckoutlabel">Zip/Postal Code *</label><input data-node-type="commerce-checkout-billing-zip-field" class="w-commerce-commercecheckoutbillingzippostalcode input medium" name="address_zip" type="text" required=""></div>
                   </div><label for="" class="w-commerce-commercecheckoutlabel">Country *</label><select class="w-commerce-commercecheckoutbillingcountryselector input medium last" name="address_country">
                     <option value="AF">Afghanistan</option>
                     <option value="AX">Aland Islands</option>
@@ -637,7 +638,7 @@
                     <option value="UA">Ukraine</option>
                     <option value="AE">United Arab Emirates</option>
                     <option value="GB">United Kingdom</option>
-                    <option selected="" value="US">United States</option>
+                    <option value="US" selected="">United States</option>
                     <option value="UM">United States Minor Outlying Islands</option>
                     <option value="UY">Uruguay</option>
                     <option value="UZ">Uzbekistan</option>
@@ -686,7 +687,7 @@
                   </div>
                   <form data-node-type="commerce-checkout-discount-form" class="w-commerce-commercecheckoutdiscounts discounts-wrapper"><label for="" class="w-commerce-commercecheckoutdiscountslabel">Discount Code</label>
                     <div class="width-100">
-                      <div class="mg-bottom-16px"><input type="text" data-node-type="commerce-checkout-discount-input" class="w-commerce-commercecheckoutdiscountsinput input small width-100 w-input" maxlength="256" name="field" data-name="field" placeholder="" id="field"></div><button aria-label="Apply Discount" class="w-commerce-commercecheckoutdiscountsbutton btn-primary small discount">Apply</button>
+                      <div class="mg-bottom-16px"><input data-node-type="commerce-checkout-discount-input" class="w-commerce-commercecheckoutdiscountsinput input small width-100 w-input" maxlength="256" name="field" data-name="field" placeholder="" type="text" id="field"></div><button aria-label="Apply Discount" class="w-commerce-commercecheckoutdiscountsbutton btn-primary small discount">Apply</button>
                     </div>
                   </form>
                 </fieldset>
