--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce2f" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -77,11 +78,11 @@
               <div class="contact-form-block w-form">
                 <form id="wf-form-Contact-Form" name="wf-form-Contact-Form" data-name="Contact Form" action="https://storiesofchange.us21.list-manage.com/subscribe/post?u=c8634ae3c0e327d7c9eb8a6db&amp;amp;id=a1aa6ff17d&amp;amp;f_id=00b1ebe6f0" method="get" data-wf-page-id="654ca6b102576c694017ce2f" data-wf-element-id="86b9d228-5aa3-bc05-76d5-17e0a19b79a3">
                   <div class="w-layout-grid grid-2-columns form">
-                    <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79a5-4017ce2f"><label for="FNAME">Name</label><input type="text" class="input small w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="Enter your name" id="FNAME" required=""></div>
-                    <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79a9-4017ce2f"><label for="EMAIL-2">Email</label><input type="email" class="input small w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Enter your email address" id="EMAIL-2" required=""></div>
-                    <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79ad-4017ce2f"><label for="PHONE-2">Phone number</label><input type="tel" class="input small w-input" maxlength="256" name="PHONE" data-name="PHONE" placeholder="Enter your phone number" id="PHONE-2" required=""></div>
+                    <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79a5-4017ce2f"><label for="FNAME">Name</label><input class="input small w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="Enter your name" type="text" id="FNAME" required=""></div>
+                    <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79a9-4017ce2f"><label for="EMAIL-2">Email</label><input class="input small w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Enter your email address" type="email" id="EMAIL-2" required=""></div>
+                    <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79ad-4017ce2f"><label for="PHONE-2">Phone number</label><input class="input small w-input" maxlength="256" name="PHONE" data-name="PHONE" placeholder="Enter your phone number" type="tel" id="PHONE-2" required=""></div>
                     <div id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79b5-4017ce2f" class="text-area-wrapper"><label for="MESSAGE-2">Message</label><textarea id="MESSAGE-2" name="MESSAGE" maxlength="5000" data-name="MESSAGE" placeholder="Enter your message here..." required="" class="text-area w-input"></textarea></div>
-                    <div id="w-node-_1b74d062-3705-abab-6ba1-cdb11ccfb5fe-4017ce2f" data-w-id="1b74d062-3705-abab-6ba1-cdb11ccfb5fe" class="btn-primary btn-form-wrapper---default"><input type="submit" value="Send Message" data-wait="Please wait..." id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79b9-4017ce2f" class="btn-primary btn-contact-arrow w-button">
+                    <div id="w-node-_1b74d062-3705-abab-6ba1-cdb11ccfb5fe-4017ce2f" data-w-id="1b74d062-3705-abab-6ba1-cdb11ccfb5fe" class="btn-primary btn-form-wrapper---default"><input type="submit" data-wait="Please wait..." id="w-node-_86b9d228-5aa3-bc05-76d5-17e0a19b79b9-4017ce2f" class="btn-primary btn-contact-arrow w-button" value="Send Message">
                       <div class="line-rounded-icon arrow-right"></div>
                     </div>
                   </div>
