--- a/detail_blog-category.html
+++ b/detail_blog-category.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce34" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -74,7 +75,7 @@
           <div class="text-center">
             <div class="mg-bottom-40px">
               <div class="flex-horizontal flex-wrap">
-                <h1 class="display-1 mg-bottom-0"></h1>
+                <h1 class="display-1 mg-bottom-0 w-dyn-bind-empty"></h1>
                 <div class="display-1"> </div>
                 <div class="display-1">articles</div>
               </div>
@@ -86,7 +87,7 @@
                     <div>All</div>
                   </a>
                   <a href="#" class="badge-secondary small category-badges w-inline-block">
-                    <div></div>
+                    <div class="w-dyn-bind-empty"></div>
                   </a>
                 </div>
               </div>
@@ -105,18 +106,18 @@
             <div role="list" class="grid-2-columns gap-row-48px w-dyn-items">
               <div id="w-node-_2d701784-586f-bb72-0a96-7a21e8228fb5-4017ce34" role="listitem" class="w-dyn-item">
                 <a data-w-id="2d701784-586f-bb72-0a96-7a21e8228fb6" href="#" class="blog-card-wrapper w-inline-block">
-                  <div class="card blog-card-image-wrapper"><img src="" alt="" class="blog-card-image"></div>
+                  <div class="card blog-card-image-wrapper"><img src="" alt="" class="blog-card-image w-dyn-bind-empty"></div>
                   <div class="mg-top-24px">
                     <div class="mg-bottom-20px">
                       <div class="flex-horizontal start flex-wrap---row-8px">
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                         <div class="divider-details"></div>
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                       </div>
                     </div>
-                    <h2 class="blog-card-title display-3 mg-bottom-8px"></h2>
+                    <h2 class="blog-card-title display-3 mg-bottom-8px w-dyn-bind-empty"></h2>
                     <div class="inner-container _610px">
-                      <p class="mg-bottom-0"></p>
+                      <p class="mg-bottom-0 w-dyn-bind-empty"></p>
                     </div>
                   </div>
                 </a>
