--- a/detail_portfolio-category.html
+++ b/detail_portfolio-category.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce38" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -34,7 +33,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -51,7 +53,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -67,7 +68,7 @@
           <div data-w-id="45d5bc50-01e8-e4a2-6827-54ba7ba2f032" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-container">
             <div class="text-center mg-bottom-40px">
               <div class="flex-horizontal flex-wrap">
-                <h1 class="display-1 mg-bottom-0"></h1>
+                <h1 class="display-1 mg-bottom-0 w-dyn-bind-empty"></h1>
                 <div class="display-1"> </div>
                 <div class="display-1">portfolio</div>
               </div>
@@ -80,7 +81,7 @@
                   <div>All</div>
                 </a>
                 <a href="#" class="badge-secondary small category-badges w-inline-block">
-                  <div></div>
+                  <div class="w-dyn-bind-empty"></div>
                 </a>
               </div>
             </div>
@@ -101,16 +102,16 @@
                   <div class="line-rounded-icon card-arrow-up-right"></div>
                 </div>
                 <div class="card-portfolio-icon">
-                  <div class="portfolio-icon-white-wrapper"><img src="" alt="" class="avatar-image"></div>
+                  <div class="portfolio-icon-white-wrapper"><img src="" alt="" class="avatar-image w-dyn-bind-empty"></div>
                 </div>
                 <div class="z-index-1">
-                  <h2 class="card-title display-4 mg-bottom-8px"></h2>
+                  <h2 class="card-title display-4 mg-bottom-8px w-dyn-bind-empty"></h2>
                   <div class="flex-horizontal start flex-wrap">
-                    <div class="text-200 medium"></div>
+                    <div class="text-200 medium w-dyn-bind-empty"></div>
                     <div class="text-200 medium"> </div>
                     <div class="text-200 medium">/</div>
                     <div class="text-200 medium"> </div>
-                    <div class="text-200 medium"></div>
+                    <div class="text-200 medium w-dyn-bind-empty"></div>
                   </div>
                 </div>
               </a>
