--- a/detail_portfolio.html
+++ b/detail_portfolio.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce37" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -76,18 +77,18 @@
               <div class="mg-bottom-24px">
                 <div class="flex-horizontal start flex-wrap---row-12px">
                   <div class="mg-right-18px">
-                    <div class="avatar-circle icon-wrapper"><img src="" alt="" class="avatar-image"></div>
+                    <div class="avatar-circle icon-wrapper"><img src="" alt="" class="avatar-image w-dyn-bind-empty"></div>
                   </div>
-                  <h1 class="display-2 mg-bottom-0"></h1>
+                  <h1 class="display-2 mg-bottom-0 w-dyn-bind-empty"></h1>
                 </div>
               </div>
-              <p class="mg-bottom-0"></p>
+              <p class="mg-bottom-0 w-dyn-bind-empty"></p>
             </div>
           </div>
           <div data-w-id="d09e0030-5cc6-abd6-7d33-3fea4e5d4b88" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card company-content">
             <div class="inner-container company-content">
               <h2 class="display-4 mg-bottom-8px">Company details</h2>
-              <p class="mg-bottom-32px"></p>
+              <p class="mg-bottom-32px w-dyn-bind-empty"></p>
               <div class="mg-bottom-24px">
                 <div class="inner-container _470px">
                   <div class="flex-horizontal space-between wrap---gap-24px">
@@ -95,13 +96,13 @@
                       <div class="mg-bottom-8px">
                         <div class="text-200 medium">Company</div>
                       </div>
-                      <div class="display-4"></div>
+                      <div class="display-4 w-dyn-bind-empty"></div>
                     </div>
                     <div>
                       <div class="mg-bottom-8px">
                         <div class="text-200 medium">Date</div>
                       </div>
-                      <div class="display-4"></div>
+                      <div class="display-4 w-dyn-bind-empty"></div>
                     </div>
                     <div>
                       <div class="mg-bottom-8px">
@@ -123,7 +124,7 @@
         <div data-w-id="57e2903e-c73f-c751-2ae4-1a876f5f0c75" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-container _726px center">
           <div class="inner-container _600px---tablet center">
             <div class="inner-container _500px---mbl center">
-              <div class="rich-text-v2 w-richtext"></div>
+              <div class="rich-text-v2 w-dyn-bind-empty w-richtext"></div>
               <a data-w-id="2cc3477e-b7cf-e13f-00b5-47da7c2bc986" href="#" class="btn-primary w-button">Read funding announcement<span class="line-rounded-icon arrow-right"></span></a>
             </div>
           </div>
