--- a/detail_team.html
+++ b/detail_team.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce3b" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -74,25 +75,25 @@
           <div class="w-layout-grid grid-2-columns team-member-grid">
             <div data-w-id="cbfd4513-c788-3df9-b35f-a24b2c5d241d" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card card-flex-top">
               <div class="card-card-flex-top-wrapper">
-                <div class="mg-right-24px"><img src="" loading="eager" alt="" class="avatar-circle _06"></div>
+                <div class="mg-right-24px"><img src="" loading="eager" alt="" class="avatar-circle _06 w-dyn-bind-empty"></div>
                 <div>
-                  <div class="subtitle"></div>
-                  <h1 class="display-1"></h1>
-                  <p class="mg-bottom-0"></p>
+                  <div class="subtitle w-dyn-bind-empty"></div>
+                  <h1 class="display-1 w-dyn-bind-empty"></h1>
+                  <p class="mg-bottom-0 w-dyn-bind-empty"></p>
                 </div>
               </div>
             </div>
             <div data-w-id="49608994-e378-4d59-5467-0bbc564050df" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card information-investor">
               <div class="card-information-investor-wrapper">
                 <h2 class="display-4 mg-bottom-8px">More information</h2>
-                <p class="mg-bottom-24px"></p>
+                <p class="mg-bottom-24px w-dyn-bind-empty"></p>
                 <div class="w-layout-grid grid-1-column gap-row-28px">
                   <a id="w-node-_0e40c262-15d7-7f1a-b6a8-d74fcbbd0196-4017ce3b" href="#" class="contact-link w-inline-block"><img src="images/email-icon-favicon-invstor-x-webflow-template.svg" loading="eager" alt="Email Icon Favicon - Invstor X Webflow Template">
                     <div>
                       <div class="mg-bottom-4px">
                         <div class="text-200 color-neutral-600">Send me a message</div>
                       </div>
-                      <div class="text-200 medium text-break-all"></div>
+                      <div class="text-200 medium text-break-all w-dyn-bind-empty"></div>
                     </div>
                   </a>
                   <a id="w-node-_0e40c262-15d7-7f1a-b6a8-d74fcbbd01a6-4017ce3b" href="#" class="contact-link w-inline-block">
@@ -103,7 +104,7 @@
                       </div>
                       <div class="flex-horizontal start">
                         <div class="mg-right-4px">
-                          <div class="text-200 medium text-break-all"></div>
+                          <div class="text-200 medium text-break-all w-dyn-bind-empty"></div>
                         </div>
                         <div class="line-rounded-icon text-200"></div>
                       </div>
@@ -125,7 +126,7 @@
                 <div id="w-node-_894f2d57-ce1b-e45f-f370-7faa3c2d889d-4017ce3b" class="flex-horizontal start flex-wrap center---mbl">
                   <h2 class="display-2 mg-bottom-0">Articles by</h2>
                   <div class="display-2"> </div>
-                  <h2 class="display-2 mg-bottom-0"></h2>
+                  <h2 class="display-2 mg-bottom-0 w-dyn-bind-empty"></h2>
                 </div>
                 <div id="w-node-_881f57f0-49a4-de87-1d38-91f1078417bd-4017ce3b">
                   <a id="w-node-_582fa5d1-8f70-a335-0ca1-bad3ecea8623-4017ce3b" href="#" class="btn-secondary w-button">Browse all articles</a>
@@ -137,18 +138,18 @@
             <div role="list" class="grid-2-columns align-top gap-row-48px w-dyn-items">
               <div role="listitem" class="w-dyn-item">
                 <a data-w-id="3c2e73b1-f5a1-a021-9d7f-401ab4b99b36" href="#" class="blog-card-wrapper w-inline-block">
-                  <div class="card blog-card-image-wrapper"><img src="" alt="" class="blog-card-image"></div>
+                  <div class="card blog-card-image-wrapper"><img src="" alt="" class="blog-card-image w-dyn-bind-empty"></div>
                   <div class="mg-top-24px">
                     <div class="mg-bottom-20px">
                       <div class="flex-horizontal start flex-wrap---row-8px">
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                         <div class="divider-details"></div>
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                       </div>
                     </div>
-                    <h3 class="blog-card-title display-3"></h3>
+                    <h3 class="blog-card-title display-3 w-dyn-bind-empty"></h3>
                     <div class="inner-container _610px">
-                      <p class="mg-bottom-0"></p>
+                      <p class="mg-bottom-0 w-dyn-bind-empty"></p>
                     </div>
                   </div>
                 </a>
@@ -180,29 +181,29 @@
                 <div role="listitem" class="portfolio-logo-center---item w-dyn-item">
                   <a href="#" class="card portfolio-logo-center w-inline-block">
                     <div class="line-rounded-icon card-arrow-up-right"></div>
-                    <div class="portfolio-image-center-wrapper"><img loading="eager" alt="" src="" class="portfolio-image-visible"></div>
+                    <div class="portfolio-image-center-wrapper"><img loading="eager" alt="" src="" class="portfolio-image-visible w-dyn-bind-empty"></div>
                     <div>
-                      <h3 class="display-4"></h3>
+                      <h3 class="display-4 w-dyn-bind-empty"></h3>
                       <div class="flex-horizontal start flex-wrap">
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                         <div class="text-200 medium"> </div>
                         <div class="text-200 medium">/</div>
                         <div class="text-200 medium"> </div>
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                       </div>
                     </div>
                   </a>
                   <a href="#" class="card portfolio-logo-center---hover w-inline-block">
                     <div class="line-rounded-icon card-arrow-up-right"></div>
-                    <div class="portfolio-image-center-wrapper"><img loading="eager" alt="" src="" class="portfolio-image-hover"></div>
+                    <div class="portfolio-image-center-wrapper"><img loading="eager" alt="" src="" class="portfolio-image-hover w-dyn-bind-empty"></div>
                     <div>
-                      <h3 class="display-4"></h3>
+                      <h3 class="display-4 w-dyn-bind-empty"></h3>
                       <div class="flex-horizontal start flex-wrap">
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                         <div class="text-200 medium"> </div>
                         <div class="text-200 medium">/</div>
                         <div class="text-200 medium"> </div>
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                       </div>
                     </div>
                     <div class="position-absolute portfolio-card-color-hover"></div>
