--- a/documentary.html
+++ b/documentary.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656a3cc31e308324f4cc6a67" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" aria-current="page" class="header-nav-link w-nav-link w--current">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" aria-current="page" class="btn-primary small header-btn-hidde-on-mb w-button w--current">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
