--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce63" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" aria-current="page" class="header-nav-link w-nav-link w--current">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -110,35 +111,32 @@
                 </div>
               </div>
               <div id="w-node-_0ff6b432-ba63-cbe9-0e37-d787e5c68dbe-4017ce63" class="div-block"></div>
-              <a id="w-node-_51bbf6d8-dc79-d1ed-a239-6a23d191e601-4017ce63" href="documentary.html" class="card portfolio-logo-center film w-inline-block">
-                <div class="line-rounded-icon card-arrow-up-right"></div>
+              <a id="w-node-_0f4edd10-74c4-4312-042e-378b1fc5ffb4-4017ce63" href="https://docs.google.com/forms/d/e/1FAIpQLSejPzrE_Zs_geYC9ptQMT0PM7fyd9_I_hYaODJfHgCO24lvJA/viewform" target="_blank" class="card portfolio-logo-center platform w-inline-block">
                 <div>
-                  <h3 class="display-4">Documentary Film</h3>
+                  <h3 class="display-4">Uthal Pathal</h3>
                   <div class="flex-horizontal start flex-wrap">
-                    <div class="text-200 medium">Bringing life to those untold, unheard, and unseen stories.</div>
-                    <div class="text-200 medium card-title">WATCH DOCUMENTARY</div>
+                    <div class="text-200 medium card-title">Documentary Film</div>
                   </div>
                 </div>
+                <div class="line-rounded-icon card-arrow-up-right"></div>
+              </a>
+              <a id="w-node-_51bbf6d8-dc79-d1ed-a239-6a23d191e601-4017ce63" href="documentary.html" class="card portfolio-logo-center film w-inline-block">
+                <div>
+                  <h3 class="display-4">Stories of Change</h3>
+                  <div class="flex-horizontal start flex-wrap">
+                    <div class="text-200 medium card-title">Documentary Film</div>
+                  </div>
+                </div>
+                <div class="line-rounded-icon card-arrow-up-right"></div>
               </a>
               <a id="w-node-_2f87b0c6-5d6e-d1f0-c594-dca5a16e350a-4017ce63" href="https://atlas.storiesofchange.co/" target="_blank" class="card portfolio-logo-center atlas w-inline-block">
-                <div class="line-rounded-icon card-arrow-up-right"></div>
                 <div>
-                  <h3 class="display-4">Climate Atlas Tool</h3>
+                  <h3 class="display-4">Climate Atlas</h3>
                   <div class="flex-horizontal start flex-wrap">
-                    <div class="text-200 medium">A tool of stories for activists, academics, and policymakers. </div>
-                    <div class="text-200 medium card-title">OPEN CLMATE ATLAS</div>
+                    <div class="text-200 medium card-title">Tool</div>
                   </div>
                 </div>
-              </a>
-              <a id="w-node-_0f4edd10-74c4-4312-042e-378b1fc5ffb4-4017ce63" href="https://docs.google.com/forms/d/e/1FAIpQLSejPzrE_Zs_geYC9ptQMT0PM7fyd9_I_hYaODJfHgCO24lvJA/viewform" target="_blank" class="card portfolio-logo-center platform w-inline-block">
                 <div class="line-rounded-icon card-arrow-up-right"></div>
-                <div>
-                  <h3 class="display-4">Climate Storytelling Platform</h3>
-                  <div class="flex-horizontal start flex-wrap">
-                    <div class="text-200 medium">A platform for all the storytellers to share their climate stories.</div>
-                    <div class="text-200 medium card-title">ENLIST YOUR STORY</div>
-                  </div>
-                </div>
               </a>
             </div>
           </div>
