--- a/template-pages/style-guide.html
+++ b/template-pages/style-guide.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce9e" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -1204,7 +1203,7 @@
                 <div class="w-layout-grid grid-2-columns _1-col-tablet">
                   <div>
                     <div class="w-form">
-                      <form id="email-form-01" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="55774c29-16ce-c90e-17c5-f7a2b547f62d"><label for="name-01">Label</label><input type="text" class="input small w-input" maxlength="256" name="name" data-name="Name" placeholder="Placeholder" id="name-01"></form>
+                      <form id="email-form-01" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="55774c29-16ce-c90e-17c5-f7a2b547f62d"><label for="name-01">Label</label><input class="input small w-input" maxlength="256" name="name" data-name="Name" placeholder="Placeholder" type="text" id="name-01"></form>
                       <div class="w-form-done">
                         <div>Thank you! Your submission has been received!</div>
                       </div>
@@ -1213,7 +1212,7 @@
                       </div>
                     </div>
                     <div class="w-form">
-                      <form id="email-form-02" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="232817d0-a5b7-32b9-61dc-23c834a55e4e"><label for="name-02">Label</label><input type="text" class="input w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="Placeholder" id="name-02"></form>
+                      <form id="email-form-02" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="232817d0-a5b7-32b9-61dc-23c834a55e4e"><label for="name-02">Label</label><input class="input w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="Placeholder" type="text" id="name-02"></form>
                       <div class="w-form-done">
                         <div>Thank you! Your submission has been received!</div>
                       </div>
@@ -1222,7 +1221,7 @@
                       </div>
                     </div>
                     <div class="w-form">
-                      <form id="email-form-03" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="58a73b87-cc90-68cd-343a-9582ad104e86"><label for="name-03">Label</label><input type="text" class="input large w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="Placeholder" id="name-03"></form>
+                      <form id="email-form-03" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="58a73b87-cc90-68cd-343a-9582ad104e86"><label for="name-03">Label</label><input class="input large w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="Placeholder" type="text" id="name-03"></form>
                       <div class="w-form-done">
                         <div>Thank you! Your submission has been received!</div>
                       </div>
@@ -1234,7 +1233,7 @@
                   <div>
                     <div class="w-form">
                       <form id="email-form-04" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="3dfd7f58-d5c2-ef45-4275-036750f2b70a"><label for="name-6">Label</label>
-                        <div class="position-relative"><input type="text" class="input button-inside w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="Placeholder" id="name-04">
+                        <div class="position-relative"><input class="input button-inside w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="Placeholder" type="text" id="name-04">
                           <a href="#" class="btn-primary inside-input default w-button">Default</a>
                         </div>
                       </form>
@@ -1247,7 +1246,7 @@
                     </div>
                     <div class="w-form">
                       <form id="email-form-05" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="bc0fca16-b275-81d0-c764-91c1ce582395"><label for="name-5">Label</label>
-                        <div class="position-relative"><input type="text" class="input large button-inside w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="Placeholder" id="name-05">
+                        <div class="position-relative"><input class="input large button-inside w-input" maxlength="256" name="name-3" data-name="Name 3" placeholder="Placeholder" type="text" id="name-05">
                           <a href="#" class="btn-primary inside-input default w-button">Default</a>
                         </div>
                       </form>
@@ -1327,11 +1326,11 @@
                 <div class="style---bg-white">
                   <div class="w-form">
                     <form id="email-form-09" name="email-form" data-name="Email Form" method="get" data-wf-page-id="654ca6b102576c694017ce9e" data-wf-element-id="1f8895fb-47f4-9f4e-c44a-b84cbfdfc73b"><label class="radio-button-field-wrapper small w-radio">
-                        <div class="w-form-formradioinput w-form-formradioinput--inputType-custom radio-button small w-radio-input"></div><input type="radio" data-name="Radio" id="radio-01" name="radio" value="Radio" style="opacity:0;position:absolute;z-index:-1"><span class="w-form-label" for="radio-01">Placeholder</span>
+                        <div class="w-form-formradioinput w-form-formradioinput--inputType-custom radio-button small w-radio-input"></div><input type="radio" data-name="Radio" id="radio-01" name="radio" style="opacity:0;position:absolute;z-index:-1" value="Radio"><span class="w-form-label" for="radio-01">Placeholder</span>
                       </label><label class="radio-button-field-wrapper w-radio">
-                        <div class="w-form-formradioinput w-form-formradioinput--inputType-custom radio-button w-radio-input"></div><input type="radio" data-name="Radio 3" id="radio-02" name="radio" value="Radio" style="opacity:0;position:absolute;z-index:-1"><span class="w-form-label" for="radio-02">Placeholder</span>
+                        <div class="w-form-formradioinput w-form-formradioinput--inputType-custom radio-button w-radio-input"></div><input type="radio" data-name="Radio 3" id="radio-02" name="radio" style="opacity:0;position:absolute;z-index:-1" value="Radio"><span class="w-form-label" for="radio-02">Placeholder</span>
                       </label><label class="radio-button-field-wrapper large w-radio">
-                        <div class="w-form-formradioinput w-form-formradioinput--inputType-custom radio-button large w-radio-input"></div><input type="radio" data-name="Radio 2" id="radio-03" name="radio" value="Radio" style="opacity:0;position:absolute;z-index:-1"><span class="w-form-label" for="radio-03">Placeholder</span>
+                        <div class="w-form-formradioinput w-form-formradioinput--inputType-custom radio-button large w-radio-input"></div><input type="radio" data-name="Radio 2" id="radio-03" name="radio" style="opacity:0;position:absolute;z-index:-1" value="Radio"><span class="w-form-label" for="radio-03">Placeholder</span>
                       </label></form>
                     <div class="w-form-done">
                       <div>Thank you! Your submission has been received!</div>
