--- a/401.html
+++ b/401.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017cda2" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -40,7 +39,10 @@
                 <a href="index.html" class="header-nav-link w-nav-link">Home</a>
               </li>
               <li class="header-nav-list-item left">
-                <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+              </li>
+              <li class="header-nav-list-item left">
+                <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
               </li>
               <li class="header-nav-list-item left">
                 <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -57,7 +59,6 @@
           </nav>
         </div>
         <div class="header-right-side">
-          <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
           <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
           <div class="hamburger-menu-wrapper w-nav-button">
             <div class="hamburger-menu-bar top"></div>
@@ -76,8 +77,8 @@
             <h1 class="display-2">Password protected</h1>
             <p class="mg-bottom-32px">Lorem ipsum dolor sit amet consectetur cursus accumsan congue nunc duis tincidunt auctor egestas ut purus morbi <span class="text-no-wrap">sed rhoncus.</span></p>
             <div class="inner-container _450px center">
-              <div class="position-relative"><input type="password" class="input small button-inside w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="pass">
-                <div data-w-id="ec24bbb1-16f2-8305-bd21-404a63d3a6f8" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" value="Enter now" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-password-page w-button">
+              <div class="position-relative"><input class="input small button-inside w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" type="password" id="pass">
+                <div data-w-id="ec24bbb1-16f2-8305-bd21-404a63d3a6f8" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-password-page w-button" value="Enter now">
                   <div class="line-rounded-icon arrow-right"></div>
                 </div>
               </div>
