--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce28" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -80,8 +81,8 @@
               <div class="inner-container _450px center">
                 <div class="input-button-form-block w-form">
                   <form id="wf-form-Newsletter-Form" name="wf-form-Newsletter-Form" data-name="Newsletter Form" action="https://storiesofchange.us21.list-manage.com/subscribe/post?u=c8634ae3c0e327d7c9eb8a6db&amp;amp;id=a1aa6ff17d&amp;amp;f_id=00b1ebe6f0" method="get" data-wf-page-id="654ca6b102576c694017ce28" data-wf-element-id="fe0a1008-2c11-ee8e-a714-0ee37442f98e">
-                    <div class="position-relative"><input type="email" class="input small button-inside w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Enter your email" id="EMAIL-2" required="">
-                      <div data-w-id="fe0a1008-2c11-ee8e-a714-0ee37442f991" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" value="Subscribe" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-button">
+                    <div class="position-relative"><input class="input small button-inside w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Enter your email" type="email" id="EMAIL-2" required="">
+                      <div data-w-id="fe0a1008-2c11-ee8e-a714-0ee37442f991" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-button" value="Subscribe">
                         <div class="line-rounded-icon arrow-right"></div>
                       </div>
                     </div>
