--- a/detail_blog.html
+++ b/detail_blog.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce33" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -80,17 +81,17 @@
                 <div class="flex-horizontal flex-wrap---row-8px">
                   <a href="#" class="text-200 medium category-link"></a>
                   <div class="divider-details"></div>
-                  <div class="text-200 medium"></div>
+                  <div class="text-200 medium w-dyn-bind-empty"></div>
                 </div>
               </div>
-              <h1></h1>
+              <h1 class="w-dyn-bind-empty"></h1>
               <div class="inner-container _676px center">
-                <p class="mg-bottom-48px"></p>
+                <p class="mg-bottom-48px w-dyn-bind-empty"></p>
               </div>
             </div>
           </div>
         </div>
-        <div data-w-id="10d5e0ec-67af-2779-40de-7e4d8e5de2a4" style="opacity:0" class="card blog-card-feature-image-wrapper"><img src="" loading="eager" alt="" class="image-icon"></div>
+        <div data-w-id="10d5e0ec-67af-2779-40de-7e4d8e5de2a4" style="opacity:0" class="card blog-card-feature-image-wrapper"><img src="" loading="eager" alt="" class="image-icon w-dyn-bind-empty"></div>
       </div>
     </section>
     <section class="section pd-120px">
@@ -103,14 +104,14 @@
                   <a href="#" class="content-link w-inline-block">
                     <div class="mg-bottom-24px">
                       <div class="blog---tag-wrapper">
-                        <div class="avatar-circle _04 mg-right-12px"><img src="" loading="eager" alt="" class="avatar-image"></div>
+                        <div class="avatar-circle _04 mg-right-12px"><img src="" loading="eager" alt="" class="avatar-image w-dyn-bind-empty"></div>
                         <div>
-                          <div class="display-4 mg-bottom-4px card-title"></div>
-                          <div class="text-200 medium"></div>
+                          <div class="display-4 mg-bottom-4px card-title w-dyn-bind-empty"></div>
+                          <div class="text-200 medium w-dyn-bind-empty"></div>
                         </div>
                       </div>
                     </div>
-                    <p class="mg-bottom-24px"></p>
+                    <p class="mg-bottom-24px w-dyn-bind-empty"></p>
                   </a>
                   <div class="social-media-flex-top">
                     <a href="#" class="social-icon-square without-bg w-inline-block">
@@ -130,7 +131,7 @@
               </div>
             </div>
             <div id="w-node-bc40d52e-ee6d-9388-939c-014b2a88a0a6-4017ce33" data-w-id="bc40d52e-ee6d-9388-939c-014b2a88a0a6" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="inner-container _774px _100---tablet">
-              <div class="rich-text w-richtext"></div>
+              <div class="rich-text w-dyn-bind-empty w-richtext"></div>
               <div></div>
             </div>
           </div>
@@ -153,8 +154,8 @@
             <div data-w-id="8932e75f-a7c1-cc73-43d0-bc80751b1c9f">
               <div class="input-button-form-block w-form">
                 <form id="wf-form-Newsletter-Form" name="wf-form-Newsletter-Form" data-name="Newsletter Form" method="get" data-wf-page-id="654ca6b102576c694017ce33" data-wf-element-id="8932e75f-a7c1-cc73-43d0-bc80751b1ca1">
-                  <div class="position-relative"><input type="email" class="input small button-inside w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email" id="email" required="">
-                    <div data-w-id="8932e75f-a7c1-cc73-43d0-bc80751b1ca4" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" value="Subscribe" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-button">
+                  <div class="position-relative"><input class="input small button-inside w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email" type="email" id="email" required="">
+                    <div data-w-id="8932e75f-a7c1-cc73-43d0-bc80751b1ca4" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-button" value="Subscribe">
                       <div class="line-rounded-icon arrow-right"></div>
                     </div>
                   </div>
@@ -191,16 +192,16 @@
             <div role="list" class="grid-3-columns blog-grid _3-posts-grid w-dyn-items">
               <div role="listitem" class="w-dyn-item">
                 <a data-w-id="305f1b69-6242-5a19-912b-4acdd6c99516" href="#" class="blog-card-wrapper _3-posts-item w-inline-block">
-                  <div class="card blog-card-image-wrapper _3-posts-item"><img src="" loading="eager" alt="" class="blog-card-image"></div>
+                  <div class="card blog-card-image-wrapper _3-posts-item"><img src="" loading="eager" alt="" class="blog-card-image w-dyn-bind-empty"></div>
                   <div class="_3-posts-item---content">
                     <div class="mg-bottom-20px">
                       <div class="flex-horizontal start flex-wrap---row-8px">
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                         <div class="divider-details"></div>
-                        <div class="text-200 medium"></div>
+                        <div class="text-200 medium w-dyn-bind-empty"></div>
                       </div>
                     </div>
-                    <h3 class="blog-card-title display-4 mg-bottom-0"></h3>
+                    <h3 class="blog-card-title display-4 mg-bottom-0 w-dyn-bind-empty"></h3>
                   </div>
                 </a>
               </div>
