--- a/detail_investor-category.html
+++ b/detail_investor-category.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce36" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -34,7 +33,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -51,7 +53,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -64,7 +65,7 @@
     <section class="section hero-category">
       <div class="w-layout-blockcontainer container-default w-container">
         <div class="text-center">
-          <h1 class="display-1 mg-bottom-40px"></h1>
+          <h1 class="display-1 mg-bottom-40px w-dyn-bind-empty"></h1>
           <div id="w-node-_5fec6199-65a7-f17b-3a8b-17588c9f8411-4017ce36" class="w-dyn-list">
             <div role="list" class="categories-badges-wrapper center w-dyn-items">
               <div role="listitem" class="categories-badges-item-wrapper center w-dyn-item">
@@ -72,7 +73,7 @@
                   <div>All</div>
                 </a>
                 <a href="#" class="badge-secondary small category-badges w-inline-block">
-                  <div></div>
+                  <div class="w-dyn-bind-empty"></div>
                 </a>
               </div>
             </div>
@@ -94,12 +95,12 @@
                 </div>
                 <div class="mg-bottom-30px">
                   <div class="flex-horizontal">
-                    <div class="avatar-circle _05"><img src="" loading="eager" alt="" class="avatar-image _w-h-100 fit-cover"></div>
+                    <div class="avatar-circle _05"><img src="" loading="eager" alt="" class="avatar-image _w-h-100 fit-cover w-dyn-bind-empty"></div>
                   </div>
                 </div>
                 <div class="text-center">
-                  <h2 class="card-title display-4 mg-bottom-8px"></h2>
-                  <div class="text-200 medium"></div>
+                  <h2 class="card-title display-4 mg-bottom-8px w-dyn-bind-empty"></h2>
+                  <div class="text-200 medium w-dyn-bind-empty"></div>
                 </div>
               </a>
             </div>
