--- a/detail_sku.html
+++ b/detail_sku.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce3a" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
