--- a/elements/footers.html
+++ b/elements/footers.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce49" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -41,7 +40,10 @@
                   <a href="../index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="../uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="../documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="../about.html" class="header-nav-link w-nav-link">About</a>
@@ -58,7 +60,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="../documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -356,8 +357,8 @@
                         <p class="color-neutral-300 mg-bottom-40px">Lorem ipsum dolor sit amet consectetur sollicitudin pulvinar <span class="text-no-wrap">ipsum ut senectus.</span></p>
                         <div class="input-button-form-block w-form">
                           <form id="wf-form-Newsletter-Form" name="wf-form-Newsletter-Form" data-name="Newsletter Form" method="get" data-wf-page-id="654ca6b102576c694017ce49" data-wf-element-id="29d045d1-268c-aa1c-d4b6-e19b3feb6213">
-                            <div class="position-relative"><input type="email" class="input small button-inside w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email" id="email" required="">
-                              <div data-w-id="29d045d1-268c-aa1c-d4b6-e19b3feb6216" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" value="Subscribe" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-button">
+                            <div class="position-relative"><input class="input small button-inside w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email" type="email" id="email" required="">
+                              <div data-w-id="29d045d1-268c-aa1c-d4b6-e19b3feb6216" class="btn-primary inside-input btn-form-wrapper---default"><input type="submit" data-wait="Please wait..." class="btn-primary btn-form inside-input-default w-button" value="Subscribe">
                                 <div class="line-rounded-icon arrow-right"></div>
                               </div>
                             </div>
