--- a/paypal-checkout.html
+++ b/paypal-checkout.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Dec 05 2023 02:39:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jun 20 2024 10:27:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="654ca6b102576c694017ce7e" data-wf-site="654ca6b102576c694017cd73">
 <head>
   <meta charset="utf-8">
@@ -42,7 +41,10 @@
                   <a href="index.html" class="header-nav-link w-nav-link">Home</a>
                 </li>
                 <li class="header-nav-list-item left">
-                  <a href="https://medium.com/@ourstoriesofchange" class="header-nav-link w-nav-link">Stories</a>
+                  <a href="uthal-pathal.html" class="header-nav-link w-nav-link">Uthal Pathal</a>
+                </li>
+                <li class="header-nav-list-item left">
+                  <a href="documentary.html" class="header-nav-link w-nav-link">Stories</a>
                 </li>
                 <li class="header-nav-list-item left">
                   <a href="about.html" class="header-nav-link w-nav-link">About</a>
@@ -59,7 +61,6 @@
             </nav>
           </div>
           <div class="header-right-side">
-            <a data-w-id="e6b743b7-7071-04f2-f8c1-84ededcecb6c" href="documentary.html" class="btn-primary small header-btn-hidde-on-mb w-button">DOCUMENTARY</a>
             <a data-w-id="7cddd505-4025-b914-85e4-4b175f3735f3" href="https://atlas.storiesofchange.co/" class="btn-primary small header-btn-hidde-on-mb w-button">CLIMATE ATLAS</a>
             <div class="hamburger-menu-wrapper w-nav-button">
               <div class="hamburger-menu-bar top"></div>
@@ -85,8 +86,8 @@
                   <h2 class="heading-h4-size mg-bottom-0">Shipping Method</h2>
                 </div>
                 <fieldset class="checkout-block-content pd-top-0px">
-                  <script type="text/x-wf-template" id="wf-template-61a06c974a45ef7f54766f70000000000012">%3Clabel%20class%3D%22w-commerce-commercecheckoutshippingmethoditem%20shipping-method%22%3E%3Cinput%20type%3D%22radio%22%20required%3D%22%22%20class%3D%22radio-button%20small%22%20name%3D%22shipping-method-choice%22%2F%3E%3Cdiv%20class%3D%22w-commerce-commercecheckoutshippingmethoddescriptionblock%20shipping-method-content%22%3E%3Cdiv%20class%3D%22w-commerce-commerceboldtextblock%22%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22paragraph-small%20color-neutral-600%22%3E%3C%2Fdiv%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22shipping-price%22%3E%3C%2Fdiv%3E%3C%2Flabel%3E</script>
-                  <div data-node-type="commerce-checkout-shipping-methods-list" class="w-commerce-commercecheckoutshippingmethodslist shipping-list" data-wf-collection="database.commerceOrder.availableShippingMethods" data-wf-template-id="wf-template-61a06c974a45ef7f54766f70000000000012"><label class="w-commerce-commercecheckoutshippingmethoditem shipping-method"><input type="radio" required="" class="radio-button small" name="shipping-method-choice">
+                  <script type="text/x-wf-template" id="wf-template-61a06c974a45ef7f54766f70000000000012">%3Clabel%20class%3D%22w-commerce-commercecheckoutshippingmethoditem%20shipping-method%22%3E%3Cinput%20required%3D%22%22%20class%3D%22radio-button%20small%22%20type%3D%22radio%22%20name%3D%22shipping-method-choice%22%2F%3E%3Cdiv%20class%3D%22w-commerce-commercecheckoutshippingmethoddescriptionblock%20shipping-method-content%22%3E%3Cdiv%20class%3D%22w-commerce-commerceboldtextblock%22%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22paragraph-small%20color-neutral-600%22%3E%3C%2Fdiv%3E%3C%2Fdiv%3E%3Cdiv%20class%3D%22shipping-price%22%3E%3C%2Fdiv%3E%3C%2Flabel%3E</script>
+                  <div data-node-type="commerce-checkout-shipping-methods-list" class="w-commerce-commercecheckoutshippingmethodslist shipping-list" data-wf-collection="database.commerceOrder.availableShippingMethods" data-wf-template-id="wf-template-61a06c974a45ef7f54766f70000000000012"><label class="w-commerce-commercecheckoutshippingmethoditem shipping-method"><input required="" class="radio-button small" type="radio" name="shipping-method-choice">
                       <div class="w-commerce-commercecheckoutshippingmethoddescriptionblock shipping-method-content">
                         <div class="w-commerce-commerceboldtextblock"></div>
                         <div class="paragraph-small color-neutral-600"></div>
